--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="src\img-removebg-preview.png"
+      type="image/x-icon"
+    />
 
-    <title>portfolio-project</title>
+    <title>Home</title>
   </head>
   <body>
     <!-- the header containing the nav bar -->
@@ -36,8 +41,8 @@
         <h1>I'm Marvelous Obiji</h1>
         <p>A freelance full-stack web developer</p>
         <div>
-          <button type="button"><a href="#">Hire Me</a></button
-          ><button><a href="#selection-Work">My Work</a></button>
+          <button type="button"><a href="files/resume.html">Hire Me</a></button
+          ><button><a href="files/work.html">My Work</a></button>
         </div>
       </div>
 
