added video to Work page

--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
       <div>
         <div>
           <h2>My skill-set</h2>
+          <iframe
+            width="300"
+            height="200"
+            src="https://www.youtube.com/embed/EoN_4fv3T7A"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
           <!-- i will come back to this bar -->
         </div>
         <div><img src="src\5484597.jpg" alt="skill" width="300px" /></div>
