styling the pages

--- a/files/resume.html
+++ b/files/resume.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="shortcut icon"
-      href="\src\img-removebg-preview.png"
-      type="image/x-icon"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet"
     />
-    <title>Resume</title>
+    <title>Document</title>
   </head>
   <body>
     <header>
@@ -28,12 +30,11 @@
         </div>
       </nav>
     </header>
-    <hr />
-    <br />
+
     <!-- resume section -->
 
     <section class="resume">
-      <div>
+      <div class="resume-title">
         <h1 id="section-Resume">Resume</h1>
         <p>
           A small river named Duden flows by their place and supplies it with
@@ -41,95 +42,86 @@
         </p>
         <br />
       </div>
-      <div>
+      <div class="resume-grid">
         <div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
 
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-        </div>
-        <br />
         <div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
         </div>
-        <br />
+
         <div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
+        <div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
+
+        <div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
+        <div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
         </div>
       </div>
       <button><a href="#">DOWNLOAD CV</a></button>
+      <br />
+      <br />
+      <br />
+      <hr />
+      <br />
     </section>
-    <br />
-    <br />
-    <hr />
+
     <footer>
-      <div>
-        <!-- <div>
+      <div class="footer-info">
+        <div>
           <h3>About</h3>
           <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts.
+            Far far away, behind the word mountains, <br />
+            far from the countries.
           </p>
         </div>
         <div>
@@ -140,37 +132,54 @@
             <li>Content Creation</li>
             <li>Shoemaking</li>
           </ul>
-        </div> -->
+        </div>
         <div>
           <h3>Have a question?</h3>
-          <img src="\src\call-sharp.svg" alt="call" width="25px" />
-          <span>+234 905 177 5961</span><br />
-          <img src="\src\chatbox-ellipses-sharp.svg" alt="chat" width="25px" />
-          <span>marvelousobiji@gmail.com</span><br />
-          <img src="\src\location-outline.svg" alt="locate" width="25px" />
-          <span>Nigeria</span>
+          <table>
+            <tr>
+              <td><img src="/src\call-sharp.svg" alt="call" width="25px" /></td>
+              <td>+234 905 177 5961</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\chatbox-ellipses-sharp.svg"
+                  alt="chat"
+                  width="25px"
+                />
+              </td>
+              <td>marvelousobiji@gmail.com</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\location-outline.svg"
+                  alt="locate"
+                  width="25px"
+                />
+              </td>
+              <td>Nigeria</td>
+            </tr>
+          </table>
         </div>
       </div>
       <br /><br />
-      <div>
-        <a href="#"
-          ><img src="\src\logo-facebook (1).svg" alt="facebook" width="25px"
+      <div class="footer-info3">
+        <a href="http://"
+          ><img src="/src\logo-facebook (1).svg" alt="facebook" width="25px"
+        /></a>
+        <a href="http://"
+          ><img src="/src\logo-github.svg" alt="github" width="25px"
+        /></a>
+        <a href="http://"
+          ><img src="/src\logo-instagram.svg" alt="instagram" width="25px"
         /></a>
         <a href="#"
-          ><img src="\src\logo-github.svg" alt="github" width="25px"
-        /></a>
-        <a href="#"
-          ><img src="\src\logo-instagram.svg" alt="instagram" width="25px"
-        /></a>
-        <a href="#"
-          ><img src="\src\logo-linkedin.svg" alt="linkedin" width="25px"
+          ><img src="/src\logo-linkedin.svg" alt="linkedin" width="25px"
         /></a>
       </div>
       <div>
-        <h5>
-          Copyright ©2023 All rights reserved | This template is made with Love
-          by Chakor
-        </h5>
+        <h5>Copyright ©2023 All rights reserved | Bz-Codes</h5>
       </div>
     </footer>
   </body>
