--- a/files/work.html
+++ b/files/work.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="shortcut icon"
-      href="\src\img-removebg-preview.png"
-      type="image/x-icon"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet"
     />
-    <title>Work</title>
+    <title>Document</title>
   </head>
   <body>
     <header>
       <nav class="navbar">
         <div class="nav-img">
-          <img src="\src\img-removebg-preview.png" alt="logo" width="100px" />
+          <img src="\src\img-removebg-preview.png" alt="logo" />
         </div>
         <div class="nav-links">
           <ul>
@@ -29,54 +31,75 @@
       </nav>
     </header>
 
-    <hr />
-    <br />
-
     <!-- work/skillset section -->
 
     <section class="work">
       <h1 id="section-Work">Work</h1>
-      <div>
-        <div><img src="\src\3754379.jpg" alt="work" width="300px" /></div>
-        <div>
+      <div class="work1">
+        <div class="work1-img">
+          <img src="/src\3754379.png" alt="work" />
+        </div>
+        <div class="work1-div">
           <h2>What i do</h2>
-          <img src="\src\1006771.png" alt="" width="25px" />
-          <span>Web Development</span><br /><br />
-          <img src="\src\videocam-sharp.svg" alt="" width="25px" />
-          <span>Video Editing</span><br /><br />
-          <img src="\src\images.png" alt="" width="25px" />
-          <span>Content Creation</span><br /><br />
-          <img src="\src\download (2).png" alt="" width="25px" />
-          <span>Shoemaking</span>
+          <table>
+            <tr>
+              <td><img src="/src\1006771.png" alt="" /></td>
+              <td>Web Development</td>
+            </tr>
+            <tr>
+              <td><img src="/src\videocam-sharp.svg" alt="" /></td>
+              <td>Video Editing</td>
+            </tr>
+            <tr>
+              <td><img src="/src\images.png" alt="" /></td>
+              <td>Content Creation</td>
+            </tr>
+            <tr>
+              <td><img src="/src\shoe.png" alt="" /></td>
+              <td>Shoemaking</td>
+            </tr>
+          </table>
         </div>
       </div>
       <br /><br />
-      <div>
-        <div>
-          <h2>My skill-set</h2>
-          <iframe
-            width="300"
-            height="200"
-            src="https://www.youtube.com/embed/EoN_4fv3T7A"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-          <!-- i will come back to this bar -->
+      <div class="work2">
+        <div class="work1-div">
+          <h2>My Skill Set</h2>
+          <table>
+            <tr>
+              <td><img src="/src\1006771.png" alt="" /></td>
+              <td>Web Development</td>
+            </tr>
+            <tr>
+              <td><img src="/src\videocam-sharp.svg" alt="" /></td>
+              <td>Video Editing</td>
+            </tr>
+            <tr>
+              <td><img src="/src\images.png" alt="" /></td>
+              <td>Content Creation</td>
+            </tr>
+            <tr>
+              <td><img src="/src\shoe.png" alt="" /></td>
+              <td>Shoemaking</td>
+            </tr>
+          </table>
         </div>
-        <div><img src="\src\5484597.jpg" alt="skill" width="300px" /></div>
+        <div class="work2-img">
+          <img src="/src\5484597.png" alt="skill" />
+        </div>
       </div>
+      <br /><br /><br />
+      <hr />
+      <br />
     </section>
-    <br /><br />
-    <hr />
+
     <footer>
-      <div>
-        <!-- <div>
+      <div class="footer-info">
+        <div>
           <h3>About</h3>
           <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts.
+            Far far away, behind the word mountains, <br />
+            far from the countries.
           </p>
         </div>
         <div>
@@ -87,37 +110,54 @@
             <li>Content Creation</li>
             <li>Shoemaking</li>
           </ul>
-        </div> -->
+        </div>
         <div>
           <h3>Have a question?</h3>
-          <img src="\src\call-sharp.svg" alt="call" width="25px" />
-          <span>+234 905 177 5961</span><br />
-          <img src="\src\chatbox-ellipses-sharp.svg" alt="chat" width="25px" />
-          <span>marvelousobiji@gmail.com</span><br />
-          <img src="\src\location-outline.svg" alt="locate" width="25px" />
-          <span>Nigeria</span>
+          <table>
+            <tr>
+              <td><img src="/src\call-sharp.svg" alt="call" width="25px" /></td>
+              <td>+234 905 177 5961</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\chatbox-ellipses-sharp.svg"
+                  alt="chat"
+                  width="25px"
+                />
+              </td>
+              <td>marvelousobiji@gmail.com</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\location-outline.svg"
+                  alt="locate"
+                  width="25px"
+                />
+              </td>
+              <td>Nigeria</td>
+            </tr>
+          </table>
         </div>
       </div>
       <br /><br />
-      <div>
-        <a href="#"
-          ><img src="\src\logo-facebook (1).svg" alt="facebook" width="25px"
+      <div class="footer-info3">
+        <a href="http://"
+          ><img src="/src\logo-facebook (1).svg" alt="facebook" width="25px"
+        /></a>
+        <a href="http://"
+          ><img src="/src\logo-github.svg" alt="github" width="25px"
+        /></a>
+        <a href="http://"
+          ><img src="/src\logo-instagram.svg" alt="instagram" width="25px"
         /></a>
         <a href="#"
-          ><img src="\src\logo-github.svg" alt="github" width="25px"
-        /></a>
-        <a href="#"
-          ><img src="\src\logo-instagram.svg" alt="instagram" width="25px"
-        /></a>
-        <a href="#"
-          ><img src="\src\logo-linkedin.svg" alt="linkedin" width="25px"
+          ><img src="/src\logo-linkedin.svg" alt="linkedin" width="25px"
         /></a>
       </div>
       <div>
-        <h5>
-          Copyright ©2023 All rights reserved | This template is made with Love
-          by Chakor
-        </h5>
+        <h5>Copyright ©2023 All rights reserved | Bz-Codes</h5>
       </div>
     </footer>
   </body>
