--- a/files/contact.html
+++ b/files/contact.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="shortcut icon"
-      href="\src\img-removebg-preview.png"
-      type="image/x-icon"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet"
     />
-    <title>Contact</title>
+    <title>Document</title>
   </head>
   <body>
     <header>
@@ -29,40 +31,45 @@
       </nav>
     </header>
 
-    <hr />
-    <br />
-
     <!-- contact me section -->
 
     <section class="contact">
-      <div>
+      <div class="contact-title">
         <h1 id="section-Contact Me">Contact Me</h1>
         <p></p>
       </div>
-      <div>
+      <div class="contact-ads">
         <div>
-          <img src="\src\location-outline.svg" alt="" width="40px" />
+          <img src="/src\location-outline.svg" alt="" width="30px" />
           <h3>ADDRESS</h3>
-          <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+          <p>
+            198 West 21th Street,<br />
+            Suite 721 New York NY 10016
+          </p>
         </div>
         <div>
-          <img src="\src\call-sharp.svg" alt="" width="40px" />
+          <img src="/src\call-sharp.svg" alt="" width="30px" />
           <h3>ADDRESS</h3>
           <p>+ 1235 2355 98</p>
         </div>
         <div>
-          <img src="\src\chatbox-ellipses-sharp.svg" alt="" width="40px" />
+          <img src="/src\chatbox-ellipses-sharp.svg" alt="" width="30px" />
           <h3>ADDRESS</h3>
           <p>info@yoursite.com</p>
         </div>
       </div>
       <br />
-      <div>
+      <div class="contact-form">
         <form action="">
-          <input type="text" id="fname" placeholder="Your Name" />
-          <input type="emai" id="e-mail" placeholder="your Email" />
+          <input type="text" id="fname" placeholder="Your Name" required />
+          <input type="emai" id="e-mail" placeholder="your Email" required />
           <br />
-          <br /><input type="text" id="subject" placeholder="Your Subject" />
+          <br /><input
+            type="text"
+            id="subject"
+            placeholder="Your Subject"
+            required
+          />
           <br /><br />
           <textarea
             name="text"
@@ -70,25 +77,26 @@
             cols="30"
             rows="10"
             placeholder="Your Message"
+            required
           ></textarea>
           <br />
-          <button type="submit"><a href="#">Send Message</a></button>
+          <input type="submit" value="Send message" id="submit" />
         </form>
       </div>
+      <br /><br /><br />
+      <hr />
+      <br />
     </section>
-    <br /><br /><br />
-    <hr />
-    <br />
 
     <!-- the footer -->
 
     <footer>
-      <div>
-        <!-- <div>
+      <div class="footer-info">
+        <div>
           <h3>About</h3>
           <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts.
+            Far far away, behind the word mountains, <br />
+            far from the countries.
           </p>
         </div>
         <div>
@@ -99,37 +107,54 @@
             <li>Content Creation</li>
             <li>Shoemaking</li>
           </ul>
-        </div> -->
+        </div>
         <div>
           <h3>Have a question?</h3>
-          <img src="\src\call-sharp.svg" alt="call" width="25px" />
-          <span>+234 905 177 5961</span><br />
-          <img src="\src\chatbox-ellipses-sharp.svg" alt="chat" width="25px" />
-          <span>marvelousobiji@gmail.com</span><br />
-          <img src="\src\location-outline.svg" alt="locate" width="25px" />
-          <span>Nigeria</span>
+          <table>
+            <tr>
+              <td><img src="/src\call-sharp.svg" alt="call" width="25px" /></td>
+              <td>+234 905 177 5961</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\chatbox-ellipses-sharp.svg"
+                  alt="chat"
+                  width="25px"
+                />
+              </td>
+              <td>marvelousobiji@gmail.com</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\location-outline.svg"
+                  alt="locate"
+                  width="25px"
+                />
+              </td>
+              <td>Nigeria</td>
+            </tr>
+          </table>
         </div>
       </div>
       <br /><br />
-      <div>
-        <a href="#"
-          ><img src="\src\logo-facebook (1).svg" alt="facebook" width="25px"
+      <div class="footer-info3">
+        <a href="http://"
+          ><img src="/src\logo-facebook (1).svg" alt="facebook" width="25px"
+        /></a>
+        <a href="http://"
+          ><img src="/src\logo-github.svg" alt="github" width="25px"
+        /></a>
+        <a href="http://"
+          ><img src="/src\logo-instagram.svg" alt="instagram" width="25px"
         /></a>
         <a href="#"
-          ><img src="\src\logo-github.svg" alt="github" width="25px"
-        /></a>
-        <a href="#"
-          ><img src="\src\logo-instagram.svg" alt="instagram" width="25px"
-        /></a>
-        <a href="#"
-          ><img src="\src\logo-linkedin.svg" alt="linkedin" width="25px"
+          ><img src="/src\logo-linkedin.svg" alt="linkedin" width="25px"
         /></a>
       </div>
       <div>
-        <h5>
-          Copyright ©2023 All rights reserved | This template is made with Love
-          by Chakor
-        </h5>
+        <h5>Copyright ©2023 All rights reserved | Bz-Codes</h5>
       </div>
     </footer>
   </body>
