--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="shortcut icon"
-      href="src\img-removebg-preview.png"
-      type="image/x-icon"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@500;600&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
-    <title>Home</title>
+    <title>portfolio-project</title>
   </head>
   <body>
     <!-- the header containing the nav bar -->
@@ -22,7 +23,7 @@
           <img src="src\img-removebg-preview.png" alt="logo" width="100px" />
         </div>
         <div class="nav-links">
-          <ul>
+          <ul class="nav-links-list">
             <li><a href="./index.html">Home</a></li>
             <li><a href="files/about.html">About</a></li>
             <li><a href="files/work.html">Work</a></li>
@@ -32,15 +33,16 @@
         </div>
       </nav>
     </header>
+    <br /><br /><br /><br />
 
     <!-- the page banner -->
 
-    <section class="banner">
-      <div>
+    <section class="banner transition-fade">
+      <div class="banner-data">
         <h5>HELLO</h5>
         <h1>I'm Marvelous Obiji</h1>
         <p>A freelance full-stack web developer</p>
-        <div>
+        <div class="banner-but">
           <button type="button"><a href="files/resume.html">Hire Me</a></button
           ><button><a href="files/work.html">My Work</a></button>
         </div>
@@ -52,30 +54,30 @@
           alt="portriat"
         />
       </div>
+      <br /><br /><br />
+
+      <!-- <br /><br /><br /> -->
     </section>
-    <br /><br /><br />
-    <hr />
-    <br />
-
+    <!-- <br /> -->
     <!-- about me section -->
-
+    <hr />
     <section class="about">
-      <div>
+      <div class="about-title">
         <h1 id="section-About Me">About Me</h1>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum standard dummy text.
         </p>
       </div>
-      <div>
+      <div class="about-data">
         <div>
           <img
             src="src\WhatsApp_Image_2023-04-13_at_2.13.59_PM-removebg-preview.png"
             alt="profile"
           />
         </div>
-        <div>
-          <div>
+        <div class="about-data1">
+          <div id="hi">
             <h2>Hi There</h2>
             <p>
               In id nulla magna. Nullam posuere fermentum mattis. Nunc id dui at
@@ -87,70 +89,86 @@
               turpis porta sem turpis quis leo. Nulla in feugiat elit
             </p>
           </div>
-          <div>
+          <div class="about-data2">
             <div>
               <h3>Name:</h3>
               <p>Marvelous Obiji</p>
+              <br />
               <h3>Email:</h3>
               <p>marvelousobiji@gmail.com</p>
             </div>
             <div>
               <h3>Phone:</h3>
               <p>+234 905 177 5961</p>
+              <br />
               <h3>github:</h3>
               <p>Bz-codes</p>
             </div>
           </div>
         </div>
       </div>
+      <br /><br /><br />
+      <hr />
+      <br />
     </section>
-    <br /><br /><br />
-    <hr />
-    <br />
 
     <!-- work/skillset section -->
 
     <section class="work">
       <h1 id="section-Work">Work</h1>
-      <div>
-        <div><img src="src\3754379.jpg" alt="work" width="300px" /></div>
-        <div>
+      <div class="work1">
+        <div class="work1-img">
+          <img src="/src\3754379.png" alt="work" />
+        </div>
+        <div class="work1-div">
           <h2>What i do</h2>
-          <img src="src\1006771.png" alt="" width="25px" />
-          <span>Web Development</span><br /><br />
-          <img src="src\videocam-sharp.svg" alt="" width="25px" />
-          <span>Video Editing</span><br /><br />
-          <img src="src\images.png" alt="" width="25px" />
-          <span>Content Creation</span><br /><br />
-          <img src="src\download (2).png" alt="" width="25px" />
-          <span>Shoemaking</span>
+          <table>
+            <tr>
+              <td><img src="/src\1006771.png" alt="" /></td>
+              <td>Web Development</td>
+            </tr>
+            <tr>
+              <td><img src="/src\videocam-sharp.svg" alt="" /></td>
+              <td>Video Editing</td>
+            </tr>
+            <tr>
+              <td><img src="/src\images.png" alt="" /></td>
+              <td>Content Creation</td>
+            </tr>
+            <tr>
+              <td><img src="/src\shoe.png" alt="" /></td>
+              <td>Shoemaking</td>
+            </tr>
+          </table>
         </div>
       </div>
       <br /><br />
-      <div>
+      <div class="work2">
         <div>
-          <h2>My skill-set</h2>
+          <h2>My Skill Set</h2>
           <iframe
-            width="300"
-            height="200"
+            width="400"
+            height="300"
             src="https://www.youtube.com/embed/EoN_4fv3T7A"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen
           ></iframe>
-          <!-- i will come back to this bar -->
         </div>
-        <div><img src="src\5484597.jpg" alt="skill" width="300px" /></div>
+        <div class="work2-img">
+          <img src="/src\5484597.png" alt="skill" />
+        </div>
       </div>
+      <br /><br /><br />
+      <hr />
+      <br />
     </section>
-    <br /><br /><br />
-    <hr />
-    <br />
+
     <!-- resume section -->
 
     <section class="resume">
-      <div>
+      <div class="resume-title">
         <h1 id="section-Resume">Resume</h1>
         <p>
           A small river named Duden flows by their place and supplies it with
@@ -158,122 +176,118 @@
         </p>
         <br />
       </div>
-      <div>
+      <div class="resume-grid">
         <div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
 
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-        </div>
-        <br />
         <div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
         </div>
-        <br />
+
         <div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-          <div>
-            <h3>2014-2015</h3>
-            <h4>Master Degree of Design</h4>
-            <p>CAMBRIDGE UNIVERSITY</p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              <br />
-              with the necessary regelialia. It is a paradisematic country,<br />
-              in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
+        <div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
+
+        <div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
+        </div>
+        <div>
+          <h3>2014-2015</h3>
+          <h4>Master Degree of Design</h4>
+          <p>CAMBRIDGE UNIVERSITY</p>
+          <p>
+            A small river named Duden flows by their place and supplies it with
+            the necessary regelialia. It is a paradisematic country, in which
+            roasted parts of sentences fly into your mouth.
+          </p>
         </div>
       </div>
       <button><a href="#">DOWNLOAD CV</a></button>
+      <br />
+      <br />
+      <br />
+      <hr />
+      <br />
     </section>
-    <br />
-    <br />
-    <br />
-    <hr />
-    <br />
 
     <!-- contact me section -->
 
     <section class="contact">
-      <div>
+      <div class="contact-title">
         <h1 id="section-Contact Me">Contact Me</h1>
         <p></p>
       </div>
-      <div>
+      <div class="contact-ads">
         <div>
-          <img src="src\location-outline.svg" alt="" width="40px" />
+          <img src="/src\location-outline.svg" alt="" width="30px" />
           <h3>ADDRESS</h3>
-          <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+          <p>
+            198 West 21th Street,<br />
+            Suite 721 New York NY 10016
+          </p>
         </div>
         <div>
-          <img src="src\call-sharp.svg" alt="" width="40px" />
+          <img src="/src\call-sharp.svg" alt="" width="30px" />
           <h3>ADDRESS</h3>
           <p>+ 1235 2355 98</p>
         </div>
         <div>
-          <img src="src\chatbox-ellipses-sharp.svg" alt="" width="40px" />
+          <img src="/src\chatbox-ellipses-sharp.svg" alt="" width="30px" />
           <h3>ADDRESS</h3>
           <p>info@yoursite.com</p>
         </div>
       </div>
       <br />
-      <div>
+      <div class="contact-form">
         <form action="">
-          <input type="text" id="fname" placeholder="Your Name" />
-          <input type="emai" id="e-mail" placeholder="your Email" />
+          <input type="text" id="fname" placeholder="Your Name" required />
+          <input type="emai" id="e-mail" placeholder="your Email" required />
           <br />
-          <br /><input type="text" id="subject" placeholder="Your Subject" />
+          <br /><input
+            type="text"
+            id="subject"
+            placeholder="Your Subject"
+            required
+          />
           <br /><br />
           <textarea
             name="text"
@@ -281,25 +295,26 @@
             cols="30"
             rows="10"
             placeholder="Your Message"
+            required
           ></textarea>
           <br />
-          <button type="submit"><a href="">Send Message</a></button>
+          <input type="submit" value="Send message" id="submit" />
         </form>
       </div>
+      <br /><br /><br />
+      <hr />
+      <br />
     </section>
-    <br /><br /><br />
-    <hr />
-    <br />
 
     <!-- the footer -->
 
     <footer>
-      <div>
-        <!-- <div>
+      <div class="footer-info">
+        <div>
           <h3>About</h3>
           <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts.
+            Far far away, behind the word mountains, <br />
+            far from the countries.
           </p>
         </div>
         <div>
@@ -310,37 +325,54 @@
             <li>Content Creation</li>
             <li>Shoemaking</li>
           </ul>
-        </div> -->
+        </div>
         <div>
           <h3>Have a question?</h3>
-          <img src="src\call-sharp.svg" alt="call" width="25px" />
-          <span>+234 905 177 5961</span><br />
-          <img src="src\chatbox-ellipses-sharp.svg" alt="chat" width="25px" />
-          <span>marvelousobiji@gmail.com</span><br />
-          <img src="src\location-outline.svg" alt="locate" width="25px" />
-          <span>Nigeria</span>
+          <table>
+            <tr>
+              <td><img src="/src\call-sharp.svg" alt="call" width="25px" /></td>
+              <td>+234 905 177 5961</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\chatbox-ellipses-sharp.svg"
+                  alt="chat"
+                  width="25px"
+                />
+              </td>
+              <td>marvelousobiji@gmail.com</td>
+            </tr>
+            <tr>
+              <td>
+                <img
+                  src="/src\location-outline.svg"
+                  alt="locate"
+                  width="25px"
+                />
+              </td>
+              <td>Nigeria</td>
+            </tr>
+          </table>
         </div>
       </div>
       <br /><br />
-      <div>
+      <div class="footer-info3">
         <a href="http://"
-          ><img src="src\logo-facebook (1).svg" alt="facebook" width="25px"
+          ><img src="/src\logo-facebook (1).svg" alt="facebook" width="25px"
         /></a>
         <a href="http://"
-          ><img src="src\logo-github.svg" alt="github" width="25px"
+          ><img src="/src\logo-github.svg" alt="github" width="25px"
         /></a>
         <a href="http://"
-          ><img src="src\logo-instagram.svg" alt="instagram" width="25px"
+          ><img src="/src\logo-instagram.svg" alt="instagram" width="25px"
         /></a>
         <a href="#"
-          ><img src="src\logo-linkedin.svg" alt="linkedin" width="25px"
+          ><img src="/src\logo-linkedin.svg" alt="linkedin" width="25px"
         /></a>
       </div>
       <div>
-        <h5>
-          Copyright ©2023 All rights reserved | This template is made with Love
-          by Chakor
-        </h5>
+        <h5>Copyright ©2023 All rights reserved | Bz-Codes</h5>
       </div>
     </footer>
   </body>
