--- a/files/work.html
+++ b/files/work.html
@@ -63,26 +63,17 @@
       </div>
       <br /><br />
       <div class="work2">
-        <div class="work1-div">
+        <div>
           <h2>My Skill Set</h2>
-          <table>
-            <tr>
-              <td><img src="/src\1006771.png" alt="" /></td>
-              <td>Web Development</td>
-            </tr>
-            <tr>
-              <td><img src="/src\videocam-sharp.svg" alt="" /></td>
-              <td>Video Editing</td>
-            </tr>
-            <tr>
-              <td><img src="/src\images.png" alt="" /></td>
-              <td>Content Creation</td>
-            </tr>
-            <tr>
-              <td><img src="/src\shoe.png" alt="" /></td>
-              <td>Shoemaking</td>
-            </tr>
-          </table>
+          <iframe
+            width="400"
+            height="300"
+            src="https://www.youtube.com/embed/EoN_4fv3T7A"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
         <div class="work2-img">
           <img src="/src\5484597.png" alt="skill" />
